--- a/gui/views/markets.jade
+++ b/gui/views/markets.jade
@@ -3,13 +3,14 @@ extends layout
 block content
   .container
     .row
-      .col-xs-12
-        table.table.table-hover.table-striped
+      .col-xs-2
+      .col-xs-8
+        table.table.table-hover.table-striped.table-bordered
           thead
             tr
-              th Markets (#{markets.length})
-              th  Opportunities
-              th Exchanges / Order Books
+              th Market (#{markets.length})
+              th Exchanges
+              th Opportunities
           tbody
             for market in markets
               include market
