--- a/gui/views/nav.jade
+++ b/gui/views/nav.jade
@@ -1,9 +1,2 @@
-.container
-	.row
-		.col-xs-12
-			ul.nav.nav-tabs(role="tablist")
-				li
-					a(href="/") Overview
-			//
-				li
-					a(href="#") Profile
+nav#nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+	a.navbar-brand(href='/') coin.myles.io
