--- a/gui/assets/css/globals.less
+++ b/gui/assets/css/globals.less
@@ -1,24 +1,13 @@
-/*::-webkit-scrollbar {
- width: 6px;
-}
-::-webkit-scrollbar-track {
- -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
- -webkit-border-radius: 10px;
- border-radius: 10px;
+.content{
+  margin-top:70px;
 }
 
-::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  background: #BCF1ED; 
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(255,0,0,0.4); 
-}*/
-
-.vcenter {
-  display: inline-block;
-  vertical-align: middle;
-  float: none;
+.market-depth{
+  .title{
+    font-size:40px;
+    font-weight:100;
+  }
+  .side-nav{
+    
+  }
 }
