--- a/gui/assets/css/globals.less
+++ b/gui/assets/css/globals.less
@@ -1,13 +1,8 @@
-.content{
-  margin-top:70px;
+body{
+	font-family:"Courier";
+	//background:darken(#fff, 2%);
 }
 
-.market-depth{
-  .title{
-    font-size:40px;
-    font-weight:100;
-  }
-  .side-nav{
-    
-  }
+.content{
+  margin-top:70px;
 }
