--- a/gui/views/arbs.jade
+++ b/gui/views/arbs.jade
@@ -7,7 +7,7 @@ block content
         h3 #{arbs.market} Opportunites
     .row
       .col-xs-12
-        table.table.table-hover.table-striped
+        table.table.table-hover.table-striped.table-bordered.sortable
           thead
             tr
               th Buy Ex
