--- a/gui/views/markets.jade
+++ b/gui/views/markets.jade
@@ -5,7 +5,7 @@ block content
     .row
       .col-xs-2
       .col-xs-8
-        table.table.table-hover.table-striped.table-bordered
+        table.table.table-hover.table-striped.table-bordered.sortable
           thead
             tr
               th Market (#{markets.length})
