--- a/gui/views/arbs.jade
+++ b/gui/views/arbs.jade
@@ -4,7 +4,7 @@ block content
   .container
     .row
       .col-xs-12
-        h3 #{arbs.market} Opportunites
+        h3 #{arbs.market} opportunites
     .row
       .col-xs-12
         table.table.table-hover.table-striped.table-bordered.sortable
