--- a/gui/views/markets.jade
+++ b/gui/views/markets.jade
@@ -3,13 +3,13 @@ extends layout
 block content
   .container
     .row
-      .col-xs-2
-      .col-xs-8
+      .col-xs-3
+      .col-xs-6
         table.table.table-hover.table-striped.table-bordered.sortable
           thead
             tr
               th Market (#{markets.length})
-              th Exchanges
+              th Exchange Depths
               th Opportunities
           tbody
             for market in markets
