margins and no logging of arbs

--- a/gui/views/arbs.jade
+++ b/gui/views/arbs.jade
@@ -17,6 +17,7 @@ block content
               th Quantity
               th Cost
               th Revenue
+              th Margin
               th Profit
           tbody
             for arb in arbs.arbs
